@@ -1,3 +1,9 @@
+== VERSION IN PROGRESS
+
+* Fixes:
+  - Fixed crash in instanceOf and isA when argument was nil.
+
+
 == Version 2.0.0 ==
 This release adopts Semantic Versioning (http://semver.org). Since removal of deprecated items is a backwards incompatible change, the major version number is incremented. Thanks to: Jens Nerup
 
